--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "youtube-shorts-controller",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Youtube Shorts Controller",
-  "main": "index.js",
+  "homepage": "https://github.com/thanhvu1982/youtube-shorts-controller",
   "repository": "https://github.com/misa198/youtube-shorts-controller/tree/master",
-  "author": "Thanh Vu <misa198>",
+  "author": "Thanh Vu",
   "license": "MIT",
   "scripts": {
     "pre-commit": "lint-staged",
